# Hermass-quant-platform

./: .gitignore  AGENTS.md  AI_QUANT_PLATFORM_FINAL_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agents/: CODEX_ORCHESTRATOR.md  FACTOR_SOURCE_SCHEMA.md  KIMI2_NEXT_TASK_DATA_REFRESH_REPLACEMENT_AUDIT.md  KIMI_NEXT_TASK_BENCHMARKS.md  KIMI_NEXT_TASK_BROAD_FACTOR_SOURCE_RESEARCH.md  KIMI_NEXT_TASK_DATA_DOWNLOAD_AND_BUILD.md  KIMI_NEXT_TASK_EXTERNAL_SERVICE_READINESS_PILOT.md  KIMI_NEXT_TASK_F1_FACTOR_FORMULA_CONTRACTS.md  KIMI_NEXT_TASK_FACTOR_CATALOG_CURATION.md  KIMI_NEXT_TASK_FACTOR_LIBRARY_RESEARCH.md  KIMI_NEXT_TASK_GITHUB_OBSIDIAN_SYNC_DISCIPLINE.md  KIMI_NEXT_TASK_GITHUB_STARS_GROWTH_PLAN.md  KIMI_NEXT_TASK_M3_PILOT_USER_PERSONAS.md  KIMI_NEXT_TASK_PHASE2_REAL_DATA_PERF_GATES.md  KIMI_NEXT_TASK_PHASE2_REAL_DB_BASELINE_RUN.md  KIMI_NEXT_TASK_PHASE3_REAL_BASELINE_HANDOFF.md  KIMI_NEXT_TASK_PRODUCT_SCOPE_SERVICE_BOUNDARY.md  KIMI_NEXT_TASK_REAL_DATA_BENCHMARK_RUNBOOK.md  KIMI_NEXT_TASK_SOFT_LAUNCH_READINESS_OUTREACH_PACK.md  KIMI_NEXT_TASK_STRATEGYQUANT_FACTOR_BLOCKS_RESEARCH.md  KIMI_NEXT_TASK_TRADE_EVIDENCE_DATABASE_PERFORMANCE.md  KIMI_NEXT_TASK_VALIDATE_AND_BENCHMARK_PATCH.md  KIMI_RESEARCH_ENGINEER_PROMPT.md  PHASE1_API_PREVIEW_DESIGN.md  PHASE1_IMPLEMENTATION_PATCH_SPEC.md  QODER_ARCHITECT_PROMPT.md  QODER_NEXT_TASK_2026_06_08_E2E_SAMPLES.md  QODER_NEXT_TASK_AFTER_KIMI.md  QODER_NEXT_TASK_BLOCK_LIBRARY_ARCHITECTURE.md  QODER_NEXT_TASK_FACTOR_LIBRARY_ARCHITECTURE.md  QODER_NEXT_TASK_FACTOR_REGISTRY_IMPLEMENTATION_PATCH.md  QODER_NEXT_TASK_FACTOR_SOURCE_SCHEMA.md  QODER_NEXT_TASK_PHASE1_API_PREVIEW.md  QODER_NEXT_TASK_PHASE1_CODE_PATCH.md  QODER_NEXT_TASK_PHASE1_DUCKDB_PREVIEW_STORAGE_AUDIT.md  QODER_NEXT_TASK_PHASE1_IMPLEMENTATION_PATCH.md  QODER_NEXT_TASK_PHASE2_LIGHT_BACKTEST_CONTRACT.md  QODER_NEXT_TASK_PHASE2_LIGHT_BACKTEST_HARDENING_REVIEW.md  QODER_NEXT_TASK_PHASE3_WEB_UI_CONTRACT.md  QODER_NEXT_TASK_SOURCE_FACTOR_REGISTRY_CODE.md  (+2 more)
benchmarks/: README.md  _synthetic.py  dsl_e2e_perf.py  duckdb_vs_polars.py  gate_summary.py  indicator_precompute_vs_compute.py  (+3 more)
(+180 files in other folders)
