[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermass-quant-platform"
version = "0.1.0"
description = "Hermass AI Quant Platform - Agent-Native Quantitative Strategy System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "duckdb>=0.10",
    "polars>=0.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "black>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["hermass_platform"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
